--- a/Program/src/main/resources/Presentation/EditCredits.fxml
+++ b/Program/src/main/resources/Presentation/EditCredits.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -54,37 +55,38 @@
             <TableColumn fx:id="columnBroadcastTitles" prefWidth="192.66668701171875" text="Værker" />
         </columns>
       </TableView>
-      <Label layoutX="40.0" layoutY="89.0" text="Forbind krediteringsberretigede personer til værker">
+      <Label layoutX="27.0" layoutY="89.0" text="Forbind krediteringsberretigede personer til værker">
          <font>
-            <Font name="System Bold" size="14.0" />
+            <Font size="14.0" />
          </font>
       </Label>
       <VBox layoutX="40.0" layoutY="361.0" prefHeight="80.0" prefWidth="100.0">
          <children>
-            <Label prefHeight="34.0" text="Fornavn" />
-            <Label prefHeight="34.0" text="Efternavn" />
+            <Label fx:id="firstNameLabel" prefHeight="34.0" text="Fornavn" visible="false" />
+            <Label fx:id="lastNameLabel" prefHeight="34.0" text="Efternavn" visible="false" />
          </children>
       </VBox>
       <VBox layoutX="171.0" layoutY="360.0" prefHeight="88.0" prefWidth="150.0">
          <children>
-            <TextField fx:id="firstName" prefHeight="15.0">
+            <TextField fx:id="firstName" prefHeight="15.0" visible="false">
                <VBox.margin>
                   <Insets top="6.0" />
                </VBox.margin>
             </TextField>
-            <TextField fx:id="lastName" prefHeight="15.0">
+            <TextField fx:id="lastName" prefHeight="15.0" visible="false">
                <VBox.margin>
                   <Insets top="6.0" />
                </VBox.margin>
             </TextField>
          </children>
       </VBox>
-      <Label layoutX="40.0" layoutY="324.0" text="Administrér krediteringsberretigede personer">
+      <Label fx:id="changeUserTitleLabel" layoutX="27.0" layoutY="324.0" text="Administrér krediteringsberretigede personer" visible="false">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Label>
-      <Button fx:id="saveCreditButton" layoutX="277.0" layoutY="438.0" mnemonicParsing="false" text="Gem" />
-      <Button fx:id="deleteCreditButton" layoutX="226.0" layoutY="438.0" mnemonicParsing="false" text="Slet" />
+      <Button fx:id="saveCreditButton" layoutX="277.0" layoutY="438.0" mnemonicParsing="false" onAction="#saveCreditButtonOnAction" text="Gem" visible="false" />
+      <Button fx:id="deleteCreditButton" layoutX="226.0" layoutY="438.0" mnemonicParsing="false" onAction="#deleteCreditPersonButton" text="Slet" visible="false" />
+      <Hyperlink fx:id="opretPersonHyperlink" layoutX="223.0" layoutY="269.0" onAction="#onActionOpretPersonHyperLink" text="Opret person" />
    </children>
 </AnchorPane>
